Bug #44295
mds: MDCache.cc: 6400: FAILED ceph_assert(r == 0 || r == -2)
% Done:
0%
Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Description
From the LRC testing Octopus:
root@reesi001:~# ceph crash info 2020-02-24T03:31:35.947823Z_f99797f9-617c-4370-982f-b80949c6244b { "assert_condition": "r == 0 || r == -2", "assert_file": "/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.1.0-1093-g42bf1cc/rpm/el8/BUILD/ceph-15.1.0-1093-g42bf1cc/src/mds/MDCache.cc", "assert_func": "virtual void C_IO_MDC_TruncateFinish::finish(int)", "assert_line": 6400, "assert_msg": "/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.1.0-1093-g42bf1cc/rpm/el8/BUILD/ceph-15.1.0-1093-g42bf1cc/src/mds/MDCache.cc: In function 'virtual void C_IO_MDC_TruncateFinish::finish(int)' thread 7f4160f97700 time 2020-02-24T03:31:35.939751+0000\n/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.1.0-1093-g42bf1cc/rpm/el8/BUILD/ceph-15.1.0-1093-g42bf1cc/src/mds/MDCache.cc: 6400: FAILED ceph_assert(r == 0 || r == -2)\n", "assert_thread_name": "MR_Finisher", "backtrace": [ "(()+0x12dc0) [0x7f416e131dc0]", "(gsignal()+0x10f) [0x7f416cbf58df]", "(abort()+0x127) [0x7f416cbdfcf5]", "(ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x1a9) [0x7f416f2fae77]", "(()+0x279040) [0x7f416f2fb040]", "(()+0x2cd631) [0x562b740bf631]", "(MDSContext::complete(int)+0x56) [0x562b74206206]", "(MDSIOContextBase::complete(int)+0x197) [0x562b74206507]", "(Finisher::finisher_thread_entry()+0x1a5) [0x7f416f38b5a5]", "(()+0x82de) [0x7f416e1272de]", "(clone()+0x43) [0x7f416ccba133]" ], "ceph_version": "15.1.0-1093-g42bf1cc", "crash_id": "2020-02-24T03:31:35.947823Z_f99797f9-617c-4370-982f-b80949c6244b", "entity_name": "mds.reesi002", "os_id": "centos", "os_name": "CentOS Linux", "os_version": "8 (Core)", "os_version_id": "8", "process_name": "ceph-mds", "stack_sig": "20750fed3b7190406b80450d6f86989137283c668388539ab30c67bc29f11778", "timestamp": "2020-02-24T03:31:35.947823Z", "utsname_hostname": "reesi002", "utsname_machine": "x86_64", "utsname_release": "4.4.0-116-generic", "utsname_sysname": "Linux", "utsname_version": "#140-Ubuntu SMP Mon Feb 12 21:23:04 UTC 2018" }
Related issues
History
#1 Updated by Patrick Donnelly about 1 year ago
- Status changed from New to In Progress
- Assignee set to Patrick Donnelly
#2 Updated by Patrick Donnelly about 1 year ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 33538
#3 Updated by Patrick Donnelly about 1 year ago
- Related to Bug #41346: mds: MDSIOContextBase instance leak added
#4 Updated by Patrick Donnelly about 1 year ago
- Related to Bug #44294: mds: "elist.h: 91: FAILED ceph_assert(_head.empty())" added
#5 Updated by Patrick Donnelly about 1 year ago
in QA: /ceph/teuthology-archive/pdonnell-2020-02-25_15:06:35-fs-wip-pdonnell-testing-20200224.202837-distro-basic-smithi/4801543
#6 Updated by Patrick Donnelly about 1 year ago
- Status changed from Fix Under Review to Resolved
#7 Updated by Patrick Donnelly about 1 year ago
- Status changed from Resolved to Pending Backport
- Backport set to nautilus,mimic
#8 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #44479: mimic: mds: MDCache.cc: 6400: FAILED ceph_assert(r == 0 || r == -2) added
#9 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #44480: nautilus: mds: MDCache.cc: 6400: FAILED ceph_assert(r == 0 || r == -2) added
#10 Updated by Nathan Cutler 11 months ago
Apparently, this caused #44680 - linking the two issues together
#11 Updated by Nathan Cutler 11 months ago
- Related to Bug #44680: mds/Mutation.h: 128: FAILED ceph_assert(num_auth_pins == 0) added
#12 Updated by Nathan Cutler 10 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".